<resources>
    <string name="app_name">CosulBio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cosul Bio</string>
    <string name="nav_header_subtitle">your.name@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Acas&#259;</string>
    <string name="menu_myaccount">Contul meu</string>
    <string name="menu_gallery">Gallery</string>

    <string name="home_second">Home Second</string>
    <string name="todo">todo</string>
    <string name="my_orders_fragment">Comenzile mele</string>
    <string name="login">Login</string>
    <string name="login_success">Success</string>
    <string name="logout">Logout</string>
    <string name="autentificare">Autentificare</string>
    <string name="iesire_din_cont">Iesire din cont</string>
    <string name="cosul_meu">Co&#351;ul meu</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name_with_args">%1$s %2$s</string>
    <string name="email">Email</string>
    <string name="hint">Hint</string>
    <string name="empty"> </string>
    <string name="logout_confirm">Sunteti sigur ca doriti sa parasiti contul ?</string>
    <string name="lorem_ipsum">It is a long established fact that a reader will be distracted
        by the readable content of a page when looking at its layout. The point of using Lorem
        Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
        \'Content here, content here\', making it look like readable English. Many desktop
        publishing packages and web page editors now use Lorem Ipsum as their default model text,
        and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various
        versions have evolved over the years, sometimes by accident, sometimes on purpose
        (injected humour and the like).</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logged_in_successfully">Autentificare cu success!</string>
    <string name="logged_in_successfully_icon">logged in successfully icon</string>
    <string name="pret">Pre&#355; :</string>
    <string name="unit">Unit :</string>
    <string name="ron">RON</string>
</resources>
