<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/cosulMeuFragment"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/cosul_meu" />
        <item
            android:id="@+id/myOrdersFragment"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/my_orders_fragment" />
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/login" />
        <item
            android:id="@+id/logoutFragment"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/logout" />
    </group>
</menu>
