<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.belsoft.cosulbio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/myOrdersFragment"
        android:name="com.belsoft.cosulbio.ui.orders.MyOrdersFragment"
        android:label="@string/my_orders_fragment"
        tools:layout="@layout/my_orders_fragment" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.belsoft.cosulbio.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_fragment" />
    <fragment
        android:id="@+id/logoutFragment"
        android:name="com.belsoft.cosulbio.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/logout_fragment" />
    <fragment
        android:id="@+id/cosulMeuFragment"
        android:name="com.belsoft.cosulbio.ui.cosul.CosulMeuFragment"
        android:label="@string/cosul_meu"
        tools:layout="@layout/cosul_meu_fragment" />
</navigation>